# KivyApp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  __main__.py  pyproject.toml  requirements.txt
.github/workflows/: format.yml
app/: __init__.py  app.py
app/.data/: translation.json
app/api/: __init__.py  base.py  encyclopedia.py  lens.py  models.py  prices.py  production.py  users.py  weather.py
app/gui/: __init__.py  helpers.py  home.py  login.py  render.py
app/templates/: home.kv  lens.kv  prices.kv  production.kv  register.kv  search.kv  settings.kv  weather.kv
app/utils/: __init__.py  data.py  widgets.py
