[tool.poetry]
name = "agroapp"
version = "0.1.0"
description = ""
authors = ["Triyan1053 <61227305+Triyan1053@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.6.0"
aiohttp = "^3.8.3"
requests = "^2.28.1"
Kivy = "^2.1.0"


[tool.poetry.dev-dependencies]
black = "^22.8.0"
isort = "^5.10.1"
mypy = "^0.971"
pre-commit = "^2.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"




[tool.black]
line-length = 129
target-version = ['py310']


[tool.isort]
line_length = 129
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["app", "*.py"]


[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
strict_equality = true
strict_optional = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true
install_types = true
mypy_path = ["api", "*.py"]
